<resources>
    <string name="app_name">synk</string>

    <string name="thumbnail">thumbnail</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="back">back</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">Alreade have an account</string>

    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="edit_user">Edit User</string>
    <string name="album">The Albums</string>
    <string name="users">The Users</string>

    <string name="register_as_admin">Daftar sebagai admin</string>
    <string name="input_password">Input password untuk menghapus data</string>
</resources>